--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -91,7 +91,7 @@
     a {
       display: block;
       padding: 2px 0px !important;
-      border: 0px solid transparent;
+      border: 1px solid transparent;
       height: auto !important;
       overflow: hidden;
 
@@ -124,6 +124,11 @@
 
       &.jstree-clicked {
         background-color: transparent;
+      }
+
+      &.jstree-hovered {
+        background-color: #e7f4f9;
+        border: 1px dotted #CCC;
       }
     }
 
