--- a/public/app/views/records/_file_versions.html.erb
+++ b/public/app/views/records/_file_versions.html.erb
@@ -6,7 +6,7 @@
         <li class="result">
           <% if file.embed %>
             <%= render :partial => "file_version_embed/#{file.embed_type}", :locals => {:file => file} %>
-          <% elsif file.uri.scheme === "http" %>
+          <% elsif ( file.uri.scheme === "http") or (file.uri.scheme === 'https') %>
             <%= link_to file.uri.to_s, file.uri.to_s %>
           <% else %>
             <%= file.uri %>
