Add backend endpoint for loction deletion. If location has links then raise an exception.
Add delete to the location frontend toolbar, controller and routes.

If an error is displayed in the linker form (when creating a new record), focus the form on this error.  It was easy to miss.  Also show the error messages for a location on the form (rather than the top level new/edit templates).

Refactor the JSONModelI18nMixin to allow for a single message to be I18n'ed on demand

--- a/frontend/app/views/locations/_form.html.erb
+++ b/frontend/app/views/locations/_form.html.erb
@@ -20,5 +20,7 @@
     </section>
   </fieldset>
 <% end %>
+
+<%= render :partial => "shared/form_messages", :locals => {:object => @location, :form => form} %>
 <% form.emit_template("location") %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_ids", :hidden => true} %>
