--- a/frontend/app/views/locations/edit.html.erb
+++ b/frontend/app/views/locations/edit.html.erb
@@ -7,11 +7,11 @@
         <%= render :partial => "locations/sidebar" %>
       </div>
       <div class="span9">
+        <%= render :partial => "toolbar" %>
         <div class="record-pane">
           <%= link_to_help :topic => "location" %>
           <h2><%= @location.title %>  <span class="label label-info"><%= I18n.t("location._singular") %></span></h2>
           <br/>
-          <%= render :partial => "shared/form_messages", :locals => {:object => @subject, :form => form} %>
           <%= render :partial => "locations/form", :locals => {:form => form} %>
           <div class="form-actions">
             <button type="submit" class="btn btn-primary"><%= I18n.t("location._frontend.action.save") %></button>
