Introduce an 'add event' toolbar partial and use this on the accession and resource forms

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -12,6 +12,7 @@
 //= require rde
 //= require merge_dropdown
 //= require transfer_dropdown
+//= require add_event_dropdown
 
 $(function() {
   $.fn.init_resource_form = function() {
