--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -686,7 +686,7 @@ ul.subrecord-form-list {
   line-height: @baseLineHeight;
 }
 
-.transfer-form, .merge-form {
+.transfer-form, .merge-form, .add-event-form {
   padding: 10px;
 
   .controls {
