--- a/frontend/app/assets/stylesheets/archivesspace/toolbar.less
+++ b/frontend/app/assets/stylesheets/archivesspace/toolbar.less
@@ -34,7 +34,12 @@
   }
   .btn-inline-form:last-child .btn {
     .border-radius(0 4px 4px 0);
-  }   
+  }
+  .btn-inline-form {
+    .form-actions .btn{
+      .border-radius(4px);
+    }
+  }
 }
 
 .record-toolbar {
