Fix overflow issue when toolbar buttons wrap on narrow screens. Also move merge action into the record-toolbar (so it disables when a record has been edited)

--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -90,6 +90,7 @@
             <% end %>
           </div><!-- btn-group -->
         </div><!-- btn-toolbar pull-right -->
+        <div class="clearfix"></div>
       </div><!-- record-toolbar -->
     </div><!-- span12 -->
   </div><!-- row-fluid -->
