--- a/frontend/app/views/shared/_resource_toolbar.html.erb
+++ b/frontend/app/views/shared/_resource_toolbar.html.erb
@@ -13,21 +13,6 @@
           <button type="submit" class="btn btn-primary btn-small"><%= I18n.t("actions.save_prefix") %></button>
         </div>
       <% end %>
-
-      <% if user_can?('merge_archival_record') %>
-        <div class="pull-left">
-          <%=
-             render :partial => "shared/merge_dropdown",
-                    :locals => {:record => record,
-                                :controller => controller.controller_name,
-                                :confirmation_title => I18n.t("actions.merge_confirm_title"),
-                                :confirmation_msg => I18n.t("actions.merge_resource_confirm_message",
-                                                            :target => record.title)}
-          %>
-        </div>
-      <% end %>
-
-
       <% if ['edit', 'update'].include?(controller.action_name) %>
         <div class="pull-left revert-changes">
           <%= link_to I18n.t("actions.revert"), {:action => :edit, :id => record.id}, :class => "btn btn-small" %>
@@ -64,7 +49,16 @@
               <%= yield :exports %>
             </ul>
           </div>
-
+          <% if user_can?('merge_archival_record') %>
+            <%=
+                render :partial => "shared/merge_dropdown",
+                       :locals => {:record => record,
+                                   :controller => controller.controller_name,
+                                   :confirmation_title => I18n.t("actions.merge_confirm_title"),
+                                   :confirmation_msg => I18n.t("actions.merge_resource_confirm_message",
+                                                               :target => record.title)}
+            %>
+          <% end %>
           <% if user_can?('transfer_archival_record') %>
             <%=
                render :partial => "shared/transfer_dropdown",
@@ -108,6 +102,7 @@
           <% end %>
         </div>
       </div>
+      <div class="clearfix"></div>
     </div>
   </div>
 </div>
