--- a/frontend/app/views/shared/_merge_dropdown.html.erb
+++ b/frontend/app/views/shared/_merge_dropdown.html.erb
@@ -3,33 +3,35 @@
    extra_params = {} if extra_params.blank?
 %>
 
-<div id="merge-dropdown" class="btn-group dropdown" data-no-change-tracking="true">
-  <a class="btn btn-small dropdown-toggle merge-action" data-toggle="dropdown" href="#" title="<%= I18n.t("actions.merge") %>">
-    <%= I18n.t("actions.merge") %> <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu merge-form">
-    <li>
-      <p><%= I18n.t("#{singular}._frontend.messages.merge_description") %></p>
-      <%= form_context :merge, {} do |form| %>
-      <fieldset>
-        <div class="alert alert-error missing-ref-message" style="display: none;"><%= I18n.t "#{singular}._frontend.messages.please_select_a_#{singular}_to_merge" %></div>
-        <%= render :partial => "#{controller}/linker", :locals => { :form => form, :exclude_ids => [record.uri], :hide_create => true, :multiplicity => "one" }%>
-      </fieldset>
-      <div class="form-actions">
-        <%=
-           button_confirm_action(I18n.t("actions.merge"),
-                                 url_for({:controller => controller, :action => :merge, :id => record.id}.merge(extra_params)),
-                                 {
-                                   :class => "btn pull-left merge-button",
-                                   :"data-title" => confirmation_title,
-                                   :"data-message" => confirmation_msg,
-                                   :"data-confirm-btn-label" => "#{I18n.t("actions.merge")}",
-                                   :"data-confirm-btn-class" => "btn"
-                                 })
-        %>
-        <a class="btn btn-cancel pull-right" href="#"><%= I18n.t("actions.cancel") %></a>
-      </div>
-      <% end %>
-    </li>
-  </ul>
+<div class="btn btn-inline-form">
+  <div id="merge-dropdown" class="btn-group dropdown" data-no-change-tracking="true">
+    <a class="btn btn-small dropdown-toggle merge-action" data-toggle="dropdown" href="#" title="<%= I18n.t("actions.merge") %>">
+      <%= I18n.t("actions.merge") %> <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu merge-form open-aligned-right">
+      <li>
+        <p><%= I18n.t("#{singular}._frontend.messages.merge_description") %></p>
+        <%= form_context :merge, {} do |form| %>
+        <fieldset>
+          <div class="alert alert-error missing-ref-message" style="display: none;"><%= I18n.t "#{singular}._frontend.messages.please_select_a_#{singular}_to_merge" %></div>
+          <%= render :partial => "#{controller}/linker", :locals => { :form => form, :exclude_ids => [record.uri], :hide_create => true, :multiplicity => "one" }%>
+        </fieldset>
+        <div class="form-actions">
+          <%=
+             button_confirm_action(I18n.t("actions.merge"),
+                                   url_for({:controller => controller, :action => :merge, :id => record.id}.merge(extra_params)),
+                                   {
+                                     :class => "btn pull-left merge-button",
+                                     :"data-title" => confirmation_title,
+                                     :"data-message" => confirmation_msg,
+                                     :"data-confirm-btn-label" => "#{I18n.t("actions.merge")}",
+                                     :"data-confirm-btn-class" => "btn"
+                                   })
+          %>
+          <a class="btn btn-cancel pull-right" href="#"><%= I18n.t("actions.cancel") %></a>
+        </div>
+        <% end %>
+      </li>
+    </ul>
+  </div>
 </div>
