--- a/frontend/app/views/subjects/_toolbar.html.erb
+++ b/frontend/app/views/subjects/_toolbar.html.erb
@@ -12,19 +12,6 @@
           </div>
         <% end %>
 
-        <% if user_can?('merge_subject_record') %>
-          <div class="pull-left btn-toolbar">
-            <%=
-               render :partial => "shared/merge_dropdown",
-                      :locals => {:record => @subject,
-                                  :controller => :subjects,
-                                  :confirmation_title => I18n.t("actions.merge_confirm_title"),
-                                  :confirmation_msg => I18n.t("actions.merge_subject_confirm_message",
-                                                              :target => @subject.title)}
-            %>
-          </div>
-        <% end %>
-          
         <% if ['edit', 'update'].include?(controller.action_name) %>
           <div class="pull-left revert-changes">
             <%= link_to I18n.t("actions.revert"), {:controller => :subjects, :action => :edit, :id => @subject.id}, :class => "btn btn-small" %>
@@ -32,14 +19,25 @@
           </div>
         <% end %>
 
-        <% if user_can?('delete_subject_record') %>
-          <div class="btn-group btn-toolbar pull-right">
+        <div class="btn-group btn-toolbar pull-right">
+          <% if user_can?('merge_subject_record') %>
+            <%=
+                render :partial => "shared/merge_dropdown",
+                       :locals => {:record => @subject,
+                                   :controller => :subjects,
+                                   :confirmation_title => I18n.t("actions.merge_confirm_title"),
+                                   :confirmation_msg => I18n.t("actions.merge_subject_confirm_message",
+                                                               :target => @subject.title)}
+            %>
+          <% end %>
+
+          <% if user_can?('delete_subject_record') %>
             <div class="btn btn-inline-form">
               <%= button_delete_action url_for(:controller => :subjects, :action => :delete, :id => @subject.id) %>
             </div>
-          </div>
-        <% end %>
-
+          <% end %>
+        </div>
+        <div class="clearfix"></div>
       </div>
     </div>
   </div>
