Move static content for reports into a top-level directory.  Use a dedicated backend controller to serve it out.

--- a/backend/app/views/reports/_header.erb
+++ b/backend/app/views/reports/_header.erb
@@ -1,4 +1,4 @@
 <div class="header">
-  <img class="logo" src="<%= @base_url %>/images/archivesspace.small.png"/>
+  <img class="logo" src="<%= @base_url %>/reports/static/images/archivesspace.small.png"/>
   <h1><%= report.title %></h1>
 </div>
