--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -20,7 +20,7 @@
        <%= form.label_and_select "acquisition_type", form.possible_options_for("acquisition_type", true) %>
        <%= form.label_and_select "resource_type", form.possible_options_for("resource_type", true) %>
        <%= form.label_and_boolean "restrictions_apply", {}, form.default_for("restrictions_apply") %>
-       <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
+       <%= form.label_and_boolean "publish", {}, user_prefs["publish"] %>
        <%= form.label_and_boolean "access_restrictions", {}, form.default_for("access_restrictions") %>
        <%= form.label_and_textarea "access_restrictions_note" %> 
        <%= form.label_and_boolean "use_restrictions", {}, form.default_for("use_restrictions") %>
