--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -15,7 +15,7 @@
         <strong><%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></strong>
       </div>
     </div>
-    <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
+    <%= form.label_and_boolean "publish", {}, user_prefs["publish"] %>
   </section>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates_of_existence", :section_id => "#{@agent.agent_type}_dates_of_existence", :template_erb => "dates/template", :template => "existence_date", :heading_text => I18n.t("agent._frontend.section.dates_of_existence"), :template_overrides => {"date_label" => "agents/date_labels"}, :help_topic => "#{@agent.agent_type}_dates_of_existence"} %>
