--- a/frontend/app/views/defaults/_template.html.erb
+++ b/frontend/app/views/defaults/_template.html.erb
@@ -1,6 +1,7 @@
 <% define_template("defaults", jsonmodel_definition(:defaults)) do |form| %>
   <div class="subrecord-form-fields">
       <%= form.label_and_boolean "show_suppressed", {}, form.default_for("show_suppressed") %>
+      <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
       <%= form.hidden_input "junk", "bin me please" %>
    </div>
 <% end %>
