--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -23,7 +23,7 @@
       <%= form.label_and_textfield "label", :required => :conditionally %>
       <%= form.label_and_textarea "title", :required => :conditionally %>
       <%= form.label_and_textfield "component_id" %>
-      <%= form.label_and_boolean "publish", {}, form.default_for("default") %>
+      <%= form.label_and_boolean "publish", {}, user_prefs["publish"] %>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
 
     </section>
