--- a/frontend/app/views/external_documents/_template.html.erb
+++ b/frontend/app/views/external_documents/_template.html.erb
@@ -6,6 +6,6 @@
     <% unless loc_uri.nil? %>
       <%= form.label_with_field("document_link", link_to(loc_uri, loc_uri, {:target => "_blank"})) %>
     <% end %>
-    <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
+    <%= form.label_and_boolean "publish", {}, user_prefs["publish"] %>
   </div>
 <% end %>
