WIP Buttons to switch authorized/display name values on agent person names

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -756,3 +756,25 @@ ul.subrecord-form-list {
     }
   }
 }
+
+// Name form styles
+.is-authoritive-label,
+.is-display-name-label {
+  display: none;
+}
+.authoritive-name {
+  .is-authoritive-label {
+    display: inline;
+  }
+  .btn-authoritive-name-toggle {
+    display: none;
+  }
+}
+.display-name {
+  .is-display-name-label {
+    display: inline;
+  }
+  .btn-display-name-toggle {
+    display: none;
+  }
+}
