--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -1,17 +1,19 @@
 <% define_template "name_person", jsonmodel_definition(:name_person) do |form| %>
   <div class="subrecord-form-fields agent-name-form">
     <h4 class="subrecord-form-heading">
-      <span class="badge badge-info is-authoritive-label">Authoritive Name</span>
-      <button class="btn btn-small btn-authoritive-name-toggle">Make Authoritive Name</button>
-      <span class="badge badge-info is-display-name-label">Display Name</span>
-      <button class="btn btn-small btn-display-name-toggle">Make Display Name</button>
-      <%= form.hidden_input "authorized", form["authorized"] || "false" %>
-      <%= form.hidden_input "is_display_name", form["is_display_name"] || "false" %>
+      <span class="badge badge-info is-authoritive-label"><%= I18n.t("name_person.authorized") %></span>
+      <button class="btn btn-small btn-authoritive-name-toggle"><%= I18n.t("name._frontend.action.make_authorized") %></button>
+      <span class="badge badge-info is-display-name-label"><%= I18n.t("name_person.is_display_name") %></span>
+      <button class="btn btn-small btn-display-name-toggle"><%= I18n.t("name._frontend.action.make_display_name") %></button>
     </h4>
 
-    <%= form.label_and_textfield "authority_id" %>
-    <%= form.label_and_select "source", form.possible_options_for('source', true), :required => :conditionally %>
-    <%= form.label_and_select "rules", form.possible_options_for('rules', true), :required => :conditionally %>
+    <%= form.hidden_input "is_display_name", form["is_display_name"] || "false" %>
+    <div class="name-authority-fields">
+      <%= form.label_and_textfield "authority_id", :required => :conditionally %>
+      <%= form.label_and_select "source", form.possible_options_for('source', true), :required => :conditionally %>
+      <%= form.label_and_select "rules", form.possible_options_for('rules', true), :required => :conditionally %>
+      <%= form.hidden_input "authorized", form["authorized"] || "false" %>
+    </div>
     <hr/>
     <%= form.label_and_select "name_order", form.possible_options_for("name_order") %>
     <%= form.label_and_textfield "prefix" %>
