--- a/frontend/app/views/classifications/_show_inline.html.erb
+++ b/frontend/app/views/classifications/_show_inline.html.erb
@@ -19,7 +19,7 @@
             <% if !readonly["creator"].blank? %>
               <div class="token-list">
                 <%= readonly.label_with_field(:creator, render_token(:object => readonly,
-                                                                     :label => readonly["creator"]["_resolved"]["names"][0]["sort_name"],
+                                                                     :label => readonly["creator"]["_resolved"]["title"],
                                                                      :type => readonly["creator"]["_resolved"]["agent_type"],
                                                                      :uri => readonly["creator"]["_resolved"]["uri"])) %>
               </div>
