--- a/frontend/app/views/agents/edit.html.erb
+++ b/frontend/app/views/agents/edit.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :object => @agent, :controller => :agents, :agent_type => @agent.agent_type, :title => @agent.names[0]["sort_name"] %>
+<%= setup_context :object => @agent, :controller => :agents, :agent_type => @agent.agent_type, :title => @agent.title %>
 
 <%= form_for @agent, :as => "agent", :url => {:action => :update}, :html => {:class => 'form-horizontal aspace-record-form', :id => "agent_form"}.merge(update_monitor_params(@agent)) do |f| %>
   <%= form_context :agent, @agent do |form| %>
@@ -10,7 +10,7 @@
         <%= render :partial => "toolbar" %>
         <div class="record-pane">
           <%= link_to_help :topic => "#{@agent.agent_type}" %>
-          <h2><%= @agent.names[0]["sort_name"] %>  <span class="label label-info"><%= I18n.t("agent._singular") %></span></h2>
+          <h2><%= @agent.title %>  <span class="label label-info"><%= I18n.t("agent._singular") %></span></h2>
           <%= render :partial => "agents/form", :locals => {:form => form} %>
           <div class="form-actions">
             <button type="submit" class="btn btn-primary"><%= I18n.t("#{@agent.agent_type}._frontend.action.save") %></button>
