--- a/frontend/app/views/related_agents/_template.html.erb
+++ b/frontend/app/views/related_agents/_template.html.erb
@@ -38,7 +38,7 @@
         <% if opts[:readonly] %>
           <div class="token-list <%= form['_resolved']['agent_type'] %>">
             <%= form.label_with_field(:ref, render_token(:object => form,
-                                                         :label => form["_resolved"]["names"][0]["sort_name"],
+                                                         :label => form["_resolved"]["title"],
                                                          :type => form["_resolved"]["agent_type"],
                                                          :uri => form["_resolved"]["uri"])) %>
           </div>
