--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -7,12 +7,12 @@
       <button class="btn btn-small btn-display-name-toggle"><%= I18n.t("name._frontend.action.make_display_name") %></button>
     </h4>
 
-    <%= form.hidden_input "is_display_name", form["is_display_name"] || "false" %>
+    <%= form.hidden_input "is_display_name", form["is_display_name"] ? 1 : 0 %>
     <div class="name-authority-fields">
       <%= form.label_and_textfield "authority_id", :required => :conditionally %>
       <%= form.label_and_select "source", form.possible_options_for('source', true), :required => :conditionally %>
       <%= form.label_and_select "rules", form.possible_options_for('rules', true), :required => :conditionally %>
-      <%= form.hidden_input "authorized", form["authorized"] || "false" %>
+      <%= form.hidden_input "authorized", form["authorized"] ? 1 : 0 %>
       <hr/>
     </div>
 
