--- a/frontend/app/views/classification_terms/_toolbar.html.erb
+++ b/frontend/app/views/classification_terms/_toolbar.html.erb
@@ -4,6 +4,7 @@
                :parent_link => {:controller => :classifications, :action => :edit, :id => JSONModel(:classification).id_for(@classification_term.classification["ref"]), :anchor => "classification_term_#{@classification_term.id}"},
                :record => @classification_term,
                :suppressible => false,
+               :supports_events => false,
                :show_delete => user_can?('delete_classification_record')
               })
   %>
