Upon clicking a tree node, focus the node so the tab flow is reset at the context of the tree node

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -916,6 +916,8 @@ $(function() {
         }
       }).on("after_open.jstree", function() {
         loadTreeActionsForNode(getPrimarySelectedNode());
+      }).on("click", "a", function() {
+        $(this).focus();
       });
     };
 
