now that there is a publish preference extend the privilege of seeing the user prefs menu item to users who can edit archival records

--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -28,7 +28,7 @@
         <li class="divider"></li>
       <% end %>
 
-      <% user_prefs_enabled = true if user_can?('manage_repository') || user_can?('view_suppressed') || user_can?('suppress_archival_record') %>
+      <% user_prefs_enabled = true if user_can?('manage_repository') || user_can?('view_suppressed') || user_can?('suppress_archival_record') || user_can?('update_archival_record') %>
 
       <% if user_prefs_enabled %>
           <li><%= link_to I18n.t("navbar.global_preferences"), :controller => :preferences, :action => :edit, :id => 0, :global => true %></li>
