--- a/public/app/views/records/_notes.html.erb
+++ b/public/app/views/records/_notes.html.erb
@@ -11,6 +11,7 @@
 %>
 
 <% render_note = lambda do | note | %>
+  <% if note['persistent_id'] %><%= content_tag :a, nil, :name => note['persistent_id'] %><% end %>
   <% render_content.call(note) %>
   <% if note_renderers.has_key?(note['jsonmodel_type']) %>
     <% note_renderers[note['jsonmodel_type']].call(note) %>
@@ -76,11 +77,18 @@
   <dl>
     <% Array(note['items']).each do |index_item| %>
       <% if index_item['reference_ref'] %>
+        <%
+          parsed_ref = JSONModel.parse_reference(index_item['reference_ref']['ref'])
+        %>
         <% if index_item['reference_text'] %>
           <dt><%= index_item['value'] %></dt>
-            <dd><a href="<%= AppConfig[:public_prefix].gsub(/\/$/, "") %><%= index_item['reference_ref']['ref'] %>"><%= index_item['reference_text'] %></a></dd>
+          <dd>
+            <%= link_to index_item['reference_text'], :controller => :records, :action => parsed_ref[:type], :id => parsed_ref[:id], :anchor => index_item['reference'] %>
+          </dd>
         <% else %>
-          <dt><a href="<%= AppConfig[:public_prefix].gsub(/\/$/, "") %><%= index_item['reference_ref']['ref'] %>"><%= index_item['value'] %></a></dt>
+          <dt>
+            <%= link_to index_item['value'], :controller => :records, :action => parsed_ref[:type], :id => parsed_ref[:id], :anchor => index_item['reference'] %>
+          </dt>
         <% end %>
       <% else %>
         <dt><%= index_item['value'] %></dt>
