--- a/frontend/app/views/related_agents/_template.html.erb
+++ b/frontend/app/views/related_agents/_template.html.erb
@@ -48,7 +48,8 @@
                          :form => form,
                          :linker_label => I18n.t("#{relationship_type}.ref"),
                          :allowed_types => form.allowable_types_for("ref"),
-                         :exclude_ids => @agent.uri ? [@agent.uri] : []
+                         :exclude_ids => @agent.uri ? [@agent.uri] : [],
+                         :multiplicity => :one
                      }
            %>
         <% end %>
